# trello_music

./: .gitignore  Pipfile  README.md  action.py  card.py  card_deserializer.py  card_fetcher.py  mypy.ini  pyproject.toml  settings.py  test_trello.py  trello.py  trello_action.py
