[tool.poetry]
name = "trello_music"
version = "0.1.0"
description = ""
authors = ["Joel <no1joel@btinternet.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.21"
numpy = "^1.16"
matplotlib = "^3.0"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
mypy = {version = "^0.701.0",allows-prereleases = true}
pydocstyle = {version = "^3.0",allows-prereleases = true}
pylint = {version = "^2.3",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
