[tool.poetry]
name = "trello_music"
version = "0.1.0"
description = ""
authors = ["Joel <no1joel@btinternet.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
numpy = "^1.20.3"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
mypy = "^0.812"
pydocstyle = "^6.1.1"
pylint = "^2.8.3"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
